--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/hope.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hope-bench</title>
 	  <script type="text/javascript" src="/env.js"></script>
