toujours le problème handleDataReceive dans GeneralTab

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/hope.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hope-bench</title>
-	  <script type="text/javascript" src="/env.js"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/hope.svg" />
+  <link rel="preconnect" href="https://fonts.bunny.net">
+  <link href="https://fonts.bunny.net/css?family=montserrat:100,100i,400,400i,700,700i" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hope-bench</title>
+  <script type="text/javascript" src="/env.js"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
